--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,6 @@
 ---
-import data from "../data/site.json";
 
-import Button from "../components/Button.astro";
-import ButtonAlt from "../components/ButtonAlt.astro";
-const title = "Nice to see you!"
+const title = "Demonstration of Flowbite problem"
 ---
 
 <div class="bg-gradient-to-b from-white dark:from-slate-600">
@@ -14,13 +11,9 @@ const title = "Nice to see you!"
       >
         {title}
       </h1>
-      <p class="my-8 text-lg text-gray-700 dark:text-white">
-        {data.siteDescription}
-      </p>
-      <div class="mt-10 flex items-center justify-center gap-x-6">
-        <Button text="My Projects" href="/projects" />
-        <ButtonAlt text="Contact Me" href="/contact" />
-      </div>
+      <p class="mt-10">Just click the Submit button to open a modal dialog.
+        Then click the Close button in the modal dialog. It should close the dialog and remove the backdrop.
+        Unfortunately, it just closes the dialog but does not remove the backdrop.</p>
     </div>
   </div>
 </div>
