--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -49,7 +49,7 @@ import DarkModeToggle from "./DarkModeToggle.astro";
           data.pages.map((page) => {
             return (
               <li>
-                <a
+                <a id="navbar-default"
                   href={page.href}
                   class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0  md:p-0 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
                   aria-current="page"
@@ -77,52 +77,3 @@ import DarkModeToggle from "./DarkModeToggle.astro";
   }
 </style>
 
-<script>
-  // set the target element that will be collapsed or expanded (eg. navbar menu)
-  const $targetEl = document.getElementById("targetEl");
-
-  // optionally set a trigger element (eg. a button, hamburger icon)
-  const $triggerEl = document.getElementById("triggerEl");
-
-  // optional options with default values and callback functions
-  const options = {
-    onCollapse: () => {
-      console.log("element has been collapsed");
-    },
-    onExpand: () => {
-      console.log("element has been expanded");
-    },
-    onToggle: () => {
-      console.log("element has been toggled");
-    },
-  };
-
-  import { Collapse } from "flowbite";
-
-  /*
-   * $targetEl: required
-   * $triggerEl: optional
-   * options: optional
-   */
-  const collapse = new Collapse($targetEl, $triggerEl, options);
-
-  // show the target element
-  collapse.expand();
-
-  // hide the target element
-  collapse.collapse();
-
-  // toggle the visibility of the target element
-  collapse.toggle();
-
-  //open page with collapsed menu
-  document.addEventListener(
-    "astro:page-load",
-    () => {
-      // This only runs once.
-      collapse.collapse();
-    }
-  );
-
-  document.addEventListener("astro:after-swap", collapse.expand);
-</script>
