--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import data from "../data/site.json";
 <!doctype html>
 <html lang="en">
   <head>
-    <ViewTransitions />
+
     <meta charset="UTF-8" />
     <meta name="description" content={data.siteDescription} />
     <meta name="viewport" content="width=device-width" />
@@ -32,10 +32,10 @@ import data from "../data/site.json";
   </head>
   <body>
     <div class="bg-stone-100 dark:bg-slate-800 min-h-screen">
-      <Nav />
+      <!--<Nav />-->
       <div class="container">
         <slot />
-        <Footer />
+
       </div>
     </div>
     <style>
@@ -63,6 +63,6 @@ import data from "../data/site.json";
         }
       }
     </style>
-    <script is:inline src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+    <script is:inline src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
   </body>
 </html>
